Refactoring bc and made deleting flow. Almost implemented step deleting